# voice-assistant-spike

./: .env.example  .gitignore  Agents.md  CHANGELOG.md  CHARACTER_HANK.md  CHAT_INTERFACE_FIXED.md  CHAT_TESTING_GUIDE.md  CLAUDE.md  CLEANUP_SUMMARY.md  MANUAL_TEST_SCRIPT.md  NEXT_SESSION_PROMPT.md  PHASE45_COORDINATION_ISSUE_ANALYSIS.md  README.md  STORY_CHAPTERS.md  TESTING_PHASE4.md  TESTING_PHASE7.md  diagnose-key-detailed.js  diagnose-key.js  package-lock.json  package.json  pytest.ini  run_e2e_tests.sh  server.js  test.js  test_chat_and_observability.sh  test_milestone1_beat_delivery.sh  test_milestone2_browser.sh  test_milestone3_memory.sh  test_milestone3_untrigger.sh  test_milestone4_chapter2_flow.sh  test_milestone4_chapter_flow.sh  test_milestone4_users.sh  test_milestone5_tool_calls.sh  test_milestone7_character_tool.sh
PRDs/: hey_chat_prd.md  (+1 more)
backend/: .env.example  interactive_memory_test.py  pyproject.toml  requirements.txt  test_memory.py  test_memory_api.sh
backend/data/test_scenarios/: a1_ch1_beat_discovery.yaml  a2_delilah_solo_dinner_plan.yaml  a3_delilah_solo_allergy.yaml  (+8 more)
backend/scripts/: generate_sample_tool_calls.py  migrate_memories.py
backend/src/: main.py
backend/tests/: test_phase51_milestone1.py  test_phase51_milestone2.py  test_phase51_milestone3.py  test_phase51_milestone4.py  test_phase5_deferred_tasks.py  test_phase7_milestone1.py  test_phase7_milestone2.py  test_phase7_milestone3.py  test_phase7_milestone4.py  test_phase7_milestone5.py  test_phase8_milestone1.py  test_phase8_milestone2.py  test_plan_tool.py  test_story_engine.py
(+270 files in other folders)
